CHANGE config.json - update translation keys for tab "Currencies", "SEO" and "Logging and performance"

--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -313,107 +313,75 @@ languageActiveLanguagesCn=Chinese
 languageActiveLanguagesVn=Vietnamese
 CurrenciesTab=Currencies
 currencyFormatLabel=Format of currencies
-currencyFormatPossibleValueName=ISO code
-currencyFormatPossibleValueSymbol=Symbol
+currencyFormatName=ISO code
+currencyFormatSymbol=Symbol
+currencyFormatAll=ISO code and symbol
 currencyEnableSelectionLabel=Allow customer to change the currency
 currencyFormatSelectionLabel=Format of currencies in header
-currencyFormatSelectionPossibleValueName=ISO code
-currencyFormatSelectionPossibleValueSymbol=Symbol
-currencyFormatSelectionPossibleValueAll=ISO code and symbol
 currencyAvailableCurrenciesLabel=Available currencies
-currencyAvailableCurrenciesPossibleValueAED=AED (United Arab Emirates dirham)
-currencyAvailableCurrenciesPossibleValueARS=ARS (Argentine peso)
-currencyAvailableCurrenciesPossibleValueAUD=AUD (Australian dollar)
-currencyAvailableCurrenciesPossibleValueBGN=BGN (Bulgarian lev)
-currencyAvailableCurrenciesPossibleValueBHD=BHD (Bahraini dinar)
-currencyAvailableCurrenciesPossibleValueBRL=BRL (Brazilian real)
-currencyAvailableCurrenciesPossibleValueCAD=CAD (Canadian dollar)
-currencyAvailableCurrenciesPossibleValueCHF=CHF (Swiss franc)
-currencyAvailableCurrenciesPossibleValueCNY=CNY (Chinese Renminbi)
-currencyAvailableCurrenciesPossibleValueCZK=CZK (Czech koruna)
-currencyAvailableCurrenciesPossibleValueDKK=DKK (Danish krone)
-currencyAvailableCurrenciesPossibleValueEUR=EUR (Euro)
-currencyAvailableCurrenciesPossibleValueGBP=GBP (Pound sterling)
-currencyAvailableCurrenciesPossibleValueHKD=HKD (Hong Kong dollar)
-currencyAvailableCurrenciesPossibleValueHRK=HRK (Croatian kuna)
-currencyAvailableCurrenciesPossibleValueHUF=HUF (Hungarian forint)
-currencyAvailableCurrenciesPossibleValueIDR=IDR (Indonesian rupiah)
-currencyAvailableCurrenciesPossibleValueINR=INR (Indian rupee)
-currencyAvailableCurrenciesPossibleValueJPY=JPY (Japanese yen)
-currencyAvailableCurrenciesPossibleValueMXN=MXN (Mexican peso)
-currencyAvailableCurrenciesPossibleValueMYR=MYR (Malaysian ringgit)
-currencyAvailableCurrenciesPossibleValueNOK=NOK (Norwegian krone)
-currencyAvailableCurrenciesPossibleValueNZD=NZD (New Zealand dollar)
-currencyAvailableCurrenciesPossibleValuePHP=PHP (Philippine peso)
-currencyAvailableCurrenciesPossibleValuePLN=PLN (Polish zloty)
-currencyAvailableCurrenciesPossibleValueQAR=QAR (Qatari riyal)
-currencyAvailableCurrenciesPossibleValueRON=RON (Romanian leu)
-currencyAvailableCurrenciesPossibleValueRUB=RUB (Russian ruble)
-currencyAvailableCurrenciesPossibleValueSEK=SEK (Swedish krona)
-currencyAvailableCurrenciesPossibleValueSGD=SGD (Singapore dollar)
-currencyAvailableCurrenciesPossibleValueTHB=THB (Thai baht)
-currencyAvailableCurrenciesPossibleValueTRY=TRY (Turkish lira)
-currencyAvailableCurrenciesPossibleValueTWD=TWD (New Taiwan dollar)
-currencyAvailableCurrenciesPossibleValueUAH=UAH (Ukrainian hryvnia)
-currencyAvailableCurrenciesPossibleValueUSD=USD (United States dollar)
-currencyAvailableCurrenciesPossibleValueVND=VND (Vietnamese dong)
-currencyAvailableCurrenciesPossibleValueXCD=XCD (Eastern Caribbean dollar)
-currencyAvailableCurrenciesPossibleValueZAR=ZAR (South African rand)
+currencyAvailableCurrenciesAED=AED (United Arab Emirates dirham)
+currencyAvailableCurrenciesARS=ARS (Argentine peso)
+currencyAvailableCurrenciesAUD=AUD (Australian dollar)
+currencyAvailableCurrenciesBGN=BGN (Bulgarian lev)
+currencyAvailableCurrenciesBHD=BHD (Bahraini dinar)
+currencyAvailableCurrenciesBRL=BRL (Brazilian real)
+currencyAvailableCurrenciesCAD=CAD (Canadian dollar)
+currencyAvailableCurrenciesCHF=CHF (Swiss franc)
+currencyAvailableCurrenciesCNY=CNY (Chinese Renminbi)
+currencyAvailableCurrenciesCZK=CZK (Czech koruna)
+currencyAvailableCurrenciesDKK=DKK (Danish krone)
+currencyAvailableCurrenciesEUR=EUR (Euro)
+currencyAvailableCurrenciesGBP=GBP (Pound sterling)
+currencyAvailableCurrenciesHKD=HKD (Hong Kong dollar)
+currencyAvailableCurrenciesHRK=HRK (Croatian kuna)
+currencyAvailableCurrenciesHUF=HUF (Hungarian forint)
+currencyAvailableCurrenciesIDR=IDR (Indonesian rupiah)
+currencyAvailableCurrenciesINR=INR (Indian rupee)
+currencyAvailableCurrenciesJPY=JPY (Japanese yen)
+currencyAvailableCurrenciesMXN=MXN (Mexican peso)
+currencyAvailableCurrenciesMYR=MYR (Malaysian ringgit)
+currencyAvailableCurrenciesNOK=NOK (Norwegian krone)
+currencyAvailableCurrenciesNZD=NZD (New Zealand dollar)
+currencyAvailableCurrenciesPHP=PHP (Philippine peso)
+currencyAvailableCurrenciesPLN=PLN (Polish zloty)
+currencyAvailableCurrenciesQAR=QAR (Qatari riyal)
+currencyAvailableCurrenciesRON=RON (Romanian leu)
+currencyAvailableCurrenciesRUB=RUB (Russian ruble)
+currencyAvailableCurrenciesSEK=SEK (Swedish krona)
+currencyAvailableCurrenciesSGD=SGD (Singapore dollar)
+currencyAvailableCurrenciesTHB=THB (Thai baht)
+currencyAvailableCurrenciesTRY=TRY (Turkish lira)
+currencyAvailableCurrenciesTWD=TWD (New Taiwan dollar)
+currencyAvailableCurrenciesUAH=UAH (Ukrainian hryvnia)
+currencyAvailableCurrenciesUSD=USD (United States dollar)
+currencyAvailableCurrenciesVND=VND (Vietnamese dong)
+currencyAvailableCurrenciesXCD=XCD (Eastern Caribbean dollar)
+currencyAvailableCurrenciesZAR=ZAR (South African rand)
 SEOTab=SEO
+metaRobotsAll=all
+metaRobotsIndex=index
+metaRobotsNofollow=nofollow
+metaRobotsNoindex=noindex
+metaRobotsNoindexNofollow=noindex, nofollow
 metaRobotsHomeLabel=Robots for homepage
-metaRobotsHomePossibleValueAll=all
-metaRobotsHomePossibleValueIndex=index
-metaRobotsHomePossibleValueNofollow=nofollow
-metaRobotsHomePossibleValueNoindex=noindex
-metaRobotsHomePossibleValueNoindexNofollow=noindex, nofollow
 metaDeDescriptionHomeLabel=Meta description for homepage (DE)
 metaEnDescriptionHomeLabel=Meta description for homepage (EN)
 metaRobotsContactLabel=Robots for contact page
-metaRobotsContactPossibleValueAll=all
-metaRobotsContactPossibleValueIndex=index
-metaRobotsContactPossibleValueNofollow=nofollow
-metaRobotsContactPossibleValueNoindex=noindex
-metaRobotsContactPossibleValueNoindexNofollow=noindex, nofollow
 metaDeDescriptionContactLabel=Meta description for contact page (DE)
 metaEnDescriptionContactLabel=Meta description for contact page (EN)
 metaRobotsCancelRightsLabel=Robots for cancellation rights
-metaRobotsCancelRightsPossibleValueAll=all
-metaRobotsCancelRightsPossibleValueIndex=index
-metaRobotsCancelRightsPossibleValueNofollow=nofollow
-metaRobotsCancelRightsPossibleValueNoindex=noindex
-metaRobotsCancelRightsPossibleValueNoindexNofollow=noindex, nofollow
 metaDeDescriptionCancelRightsLabel=Meta description for cancellation rights (DE)
 metaEnDescriptionCancelRightsLabel=Meta description for cancellation rights (EN)
 metaRobotsCancelFormLabel=Robots for cancellation form
-metaRobotsCancelFormPossibleValueAll=all
-metaRobotsCancelFormPossibleValueIndex=index
-metaRobotsCancelFormPossibleValueNofollow=nofollow
-metaRobotsCancelFormPossibleValueNoindex=noindex
-metaRobotsCancelFormPossibleValueNoindexNofollow=noindex, nofollow
 metaDeDescriptionCancelFormLabel=Meta description for cancellation form (DE)
 metaEnDescriptionCancelFormLabel=Meta description for cancellation form (EN)
 metaRobotsLegalDisclosureLabel=Robots for legal disclosure
-metaRobotsLegalDisclosurePossibleValueAll=all
-metaRobotsLegalDisclosurePossibleValueIndex=index
-metaRobotsLegalDisclosurePossibleValueNofollow=nofollow
-metaRobotsLegalDisclosurePossibleValueNoindex=noindex
-metaRobotsLegalDisclosurePossibleValueNoindexNofollow=noindex, nofollow
 metaDeDescriptionLegalDisclosureLabel=Meta description for legal disclosure (DE)
 metaEnDescriptionLegalDisclosureLabel=Meta description for legal disclosure (EN)
 metaRobotsPrivacyPolicyLabel=Robots for privacy policy
-metaRobotsPrivacyPolicyPossibleValueAll=all
-metaRobotsPrivacyPolicyPossibleValueIndex=index
-metaRobotsPrivacyPolicyPossibleValueNofollow=nofollow
-metaRobotsPrivacyPolicyPossibleValueNoindex=noindex
-metaRobotsPrivacyPolicyPossibleValueNoindexNofollow=noindex, nofollow
 metaDeDescriptionPrivacyPolicyLabel=Meta description for privacy policy (DE)
 metaEnDescriptionPrivacyPolicyLabel=Meta description for privacy policy (EN)
 metaRobotsTermsAndConditionsLabel=Robots for terms and conditions
-metaRobotsTermsAndConditionsPossibleValueAll=all
-metaRobotsTermsAndConditionsPossibleValueIndex=index
-metaRobotsTermsAndConditionsPossibleValueNofollow=nofollow
-metaRobotsTermsAndConditionsPossibleValueNoindex=noindex
-metaRobotsTermsAndConditionsPossibleValueNoindexNofollow=noindex, nofollow
 metaDeDescriptionTermsAndConditionsLabel=Meta description for terms and conditions (DE)
 metaEnDescriptionTermsAndConditionsLabel=Meta description for terms and conditions (EN)
 DesignTab=Design
@@ -425,13 +393,13 @@ brandWarningLabel=Warning colour
 brandDangerLabel=Danger colour
 LoggingAndPerformanceTab=Logging and performance
 logDataLabel=Enable logging options
-logDataPossibleValuePrintErrors=Print errors
-logDataPossibleValuePrintSuccess=Print success
-logDataPossibleValuePrintWarnings=Print warnings
-logDataPossibleValuePrintInfos=Print information
-logDataPossibleValuePrintStackTrace=Print stack trace
-logDataPossibleValueLogMessages=Log messages
-logDataPossibleValueShowErrorCode=Show error codes
+logDataPrintErrors=Print errors
+logDataPrintSuccess=Print success
+logDataPrintWarnings=Print warnings
+logDataPrintInfos=Print information
+logDataPrintStackTrace=Print stack trace
+logDataLogMessages=Log messages
+logDataShowErrorCode=Show error codes
 logPerformanceLevelLabel=Performance level
-logPerformanceLevelPossibleValueDevelopment=Development
-logPerformanceLevelPossibleValueLive=Live
+logPerformanceLevelDevelopment=Development
+logPerformanceLevelLive=Live
