CHANGE config.json - change tab translation keys to lowercase

--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -1,4 +1,4 @@
-GlobalTab = Global
+globalTab = Global
 headerCompanyNameLabel = Name of your store
 headerCompanyLogoLabel = URL to your company logo
 globalShippingCostsCategoryIdLabel = Category to display shipping information
@@ -27,7 +27,7 @@ contactMapZoomLabel = Zoom level
 contactMapShowInMobileLabel = Show map in mobile view
 contactEnableConfirmingPrivacyPolicyLabel = Enable to display checkbox for confirming privacy policy
 
-HomepageTab = Homepage
+homepageTab = Homepage
 homepageShowShopBuilderContentLabel = Show Shop Builder homepage
 defaultHomepageLabel = Show default homepage
 homepageSliderItemId1Label = ID of the item variation to display in the first slide of the image slider
@@ -47,7 +47,7 @@ homepageHomepageCategory4Label = Category to display in the third category previ
 homepageHomepageCategory5Label = Category to display in the fourth category preview
 homepageHomepageCategory6Label = Category to display in the second list of items
 
-HeaderTab = Header
+headerTab = Header
 headerShowNavbarsLabel = Position of the navigation bar
 headerShowNavbarsTop = At the top
 headerShowNavbarsSide = On the left
@@ -70,7 +70,7 @@ headerMegamenuItemsStage1Label = Number of categories in level 2
 headerMegamenuItemsStage2Label = Number of categories in level 3
 headerMegamenuItemsStage3Label = Number of categories in level 4
 
-FooterTab = Footer
+footerTab = Footer
 footerToTopButtonLabel = Position of the Back-to-top button
 footerToTopButtonRight = On the right at the bottom
 footerToTopButtonBottom = In the middle at the bottom
@@ -95,7 +95,7 @@ footerCol3CategoriesLabel = List of IDs of categories to display in third column
 footerCancellationUsePdfLabel = Use PDF cancellation form
 footerCancellationPdfPathLabel = URL to PDF file
 
-ItemViewTab = Item view
+itemViewTab = Item view
 itemDisplayNameLabel = Name of an item to display
 itemDisplayNameItemName = Item name
 itemDisplayNameVariationName = Variation name
@@ -143,7 +143,7 @@ itemShowCategoryImageLabel = Show category image in category view
 itemShowCategoryDescriptionLabel = Show category description in category view
 itemRequireAllPropertiesLabel = Require all order properties before adding an item to shopping cart
 
-ItemListsTab = Item lists
+itemListsTab = Item lists
 itemListsLastSeenNumberLabel = Last seen: Number of last seen items
 itemListsLastSeenNumber4 = 4
 itemListsLastSeenNumber8 = 8
@@ -169,7 +169,7 @@ itemLists3DeListNameLabel = Name of the third item list (DE)
 itemLists3EnListNameLabel = Name of the third item list (EN)
 itemLists3TagIdsLabel = List of IDs of tags to display in the third item list
 
-ShoppingCartTab = Shopping cart
+shoppingCartTab = Shopping cart
 basketItemDataLabel = Show item information
 basketItemDataItemId = Item ID
 basketItemDataDescriptionShort = Preview text
@@ -194,7 +194,7 @@ basketPreviewTypeLabel = The type of the cart preview
 basketPreviewTypeHover = Hover
 basketPreviewTypeRight = Right
 
-PaginationAndSortingTab = Pagination and sorting
+paginationAndSortingTab = Pagination and sorting
 paginationPositionLabel = Pagination position
 paginationPositionTop = Top
 paginationPositionBottom = Bottom
@@ -263,7 +263,7 @@ sortingPrioritySearch2Label = Recommended search results: Second search value
 sortingPrioritySearch3Label = Recommended search results: Third search value
 searchForwardToSingleItemLabel = Search: Forward to single item view
 
-CheckoutAndMyAccountTab = Checkout and My account
+checkoutAndMyAccountTab = Checkout and My account
 myAccountOrdersPerPageLabel = Number of orders to show per page in order history
 myAccountOrderReturnActiveLabel = Allow returns in My account
 myAccountOrderReturnDaysLabel = Number of days to return items of an order
@@ -299,7 +299,7 @@ addressFieldEnAddress3 = Address 3
 addressFieldEnAddress4 = Address 4
 addressFieldEnPhoneNumber = Phone number
 
-LanguagesTab = Languages
+languagesTab = Languages
 languageActiveLanguagesLabel = Active languages
 languageActiveLanguagesDe = German
 languageActiveLanguagesEn = English
@@ -321,7 +321,7 @@ languageActiveLanguagesSk = Slovak
 languageActiveLanguagesCn = Chinese
 languageActiveLanguagesVn = Vietnamese
 
-CurrenciesTab = Currencies
+currenciesTab = Currencies
 currencyFormatLabel = Format of currencies
 currencyFormatName = ISO code
 currencyFormatSymbol = Symbol
@@ -368,7 +368,7 @@ currencyAvailableCurrenciesVND = VND (Vietnamese dong)
 currencyAvailableCurrenciesXCD = XCD (Eastern Caribbean dollar)
 currencyAvailableCurrenciesZAR = ZAR (South African rand)
 
-SEOTab = SEO
+seoTab = SEO
 metaRobotsAll = all
 metaRobotsIndex = index
 metaRobotsNofollow = nofollow
@@ -396,7 +396,7 @@ metaRobotsTermsAndConditionsLabel = Robots for terms and conditions
 metaDeDescriptionTermsAndConditionsLabel = Meta description for terms and conditions (DE)
 metaEnDescriptionTermsAndConditionsLabel = Meta description for terms and conditions (EN)
 
-DesignTab = Design
+designTab = Design
 brandPrimaryLabel = Primary colour
 brandSecondaryLabel = Secondary colour
 brandSuccessLabel = Success colour
@@ -404,7 +404,7 @@ brandInfoLabel = Information colour
 brandWarningLabel = Warning colour
 brandDangerLabel = Danger colour
 
-LoggingAndPerformanceTab = Logging and performance
+loggingAndPerformanceTab = Logging and performance
 logDataLabel = Enable logging options
 logDataPrintErrors = Print errors
 logDataPrintSuccess = Print success
