--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -1,4 +1,4 @@
-GlobalTab = Global
+globalTab = Global
 headerCompanyNameLabel = Name des Webshops
 headerCompanyLogoLabel = URL des Firmenlogos
 globalShippingCostsCategoryIdLabel = Kategorie zur Anzeige von Versandkosteninformationen
@@ -27,7 +27,7 @@ contactMapZoomLabel = Zoomstufe
 contactMapShowInMobileLabel = Karte auf mobilen Endgeräten darstellen
 contactEnableConfirmingPrivacyPolicyLabel = Aktivieren, um eine Checkbox anzeigen zu lassen, mit der die Datenschutzerklärung akzeptiert werden kann
 
-HomepageTab = Startseite
+homepageTab = Startseite
 homepageShowShopBuilderContentLabel = Shop Builder Startseite anzeigen
 defaultHomepageLabel = Standardstartseite anzeigen
 homepageSliderItemId1Label = ID der Artikelvariante, die auf der ersten Folie des Image Sliders angezeigt wird
@@ -47,7 +47,7 @@ homepageHomepageCategory4Label = Artikelkategorie, die in der dritten Kategoriev
 homepageHomepageCategory5Label = Artikelkategorie, die in der vierten Kategorievorschau angezeigt wird
 homepageHomepageCategory6Label = Artikelkategorie für die zweite Artikelliste
 
-HeaderTab = Header
+headerTab = Header
 headerShowNavbarsLabel = Position der Navigationsleiste
 headerShowNavbarsTop = Oben
 headerShowNavbarsSide = Links
@@ -70,7 +70,7 @@ headerMegamenuItemsStage1Label = Anzahl der Kategorien in der zweiten Ebene
 headerMegamenuItemsStage2Label = Anzahl der Kategorien in der dritten Ebene
 headerMegamenuItemsStage3Label = Anzahl der Kategorien in der vierten Ebene
 
-FooterTab = Footer
+footerTab = Footer
 footerToTopButtonLabel = Position des Nach-oben-Buttons
 footerToTopButtonRight = Unten rechts
 footerToTopButtonBottom = Unten mittig
@@ -95,7 +95,7 @@ footerCol3CategoriesLabel = IDs der Kategorien, die in der dritten Spalte angeze
 footerCancellationUsePdfLabel = PDF-Datei als Widerrufsformular verwenden
 footerCancellationPdfPathLabel = URL der PDF-Datei
 
-ItemViewTab = Artikelansicht
+itemViewTab = Artikelansicht
 itemDisplayNameLabel = Angezeigter Name des Artikels
 itemDisplayNameItemName = Artikelname
 itemDisplayNameVariationName = Variantenname
@@ -143,7 +143,7 @@ itemShowCategoryImageLabel = Vorschaubild in der Kategorieansicht anzeigen
 itemShowCategoryDescriptionLabel = Beschreibung der Kategorie in der Kategorieansicht anzeigen
 itemRequireAllPropertiesLabel = Alle Bestellmerkmale erfordern, bevor ein Artikel in den Warenkorb gelegt werden kann
 
-ItemListsTab = Artikellisten
+itemListsTab = Artikellisten
 itemListsLastSeenNumberLabel = Zuletzt angesehen: Anzahl der zuletzt angesehenen Artikel
 itemListsLastSeenNumber4 = 4
 itemListsLastSeenNumber8 = 8
@@ -169,7 +169,7 @@ itemLists3DeListNameLabel = Name der dritten Artikelliste (DE)
 itemLists3EnListNameLabel = Name der dritten Artikelliste (EN)
 itemLists3TagIdsLabel = Tag-ID-Liste für die dritte Artikelliste
 
-ShoppingCartTab = Warenkorb
+shoppingCartTab = Warenkorb
 basketItemDataLabel = Angezeigte Artikelinformationen
 basketItemDataItemId = Artikel-ID
 basketItemDataDescriptionShort = Vorschautext
@@ -193,7 +193,8 @@ basketAddItemToBasketConfirmNoInformation = Keine Informationen anzeigen
 basketPreviewTypeLabel = Art der Warenkorbvorschau
 basketPreviewTypeHover = Dropdown bei Mouse-over
 basketPreviewTypeRight = Rechts einblenden
-PaginationAndSortingTab = Paginierung und Sortierung
+
+paginationAndSortingTab = Paginierung und Sortierung
 paginationPositionLabel = Position der Paginierung
 paginationPositionTop = Oberhalb der Artikelliste
 paginationPositionBottom = Unterhalb der Artikelliste
@@ -262,7 +263,7 @@ sortingPrioritySearch2Label = Empfohlene Artikelsuche: Zweiter Wert für die Art
 sortingPrioritySearch3Label = Empfohlene Artikelsuche: Dritter Wert für die Artikelsuche
 searchForwardToSingleItemLabel = Artikelsuche: Zur Artikeleinzelansicht weiterleiten
 
-CheckoutAndMyAccountTab = Kaufabwicklung und Mein Konto
+checkoutAndMyAccountTab = Kaufabwicklung und Mein Konto
 myAccountOrdersPerPageLabel = Anzahl der Aufträge pro Seite in der Auftragshistorie
 myAccountOrderReturnActiveLabel = Retourenabwicklung im Mein-Konto-Bereich zulassen
 myAccountOrderReturnDaysLabel = Länge der Retourenfrist in Tagen
@@ -298,7 +299,7 @@ addressFieldEnAddress3 = Adresse 3
 addressFieldEnAddress4 = Adresse 4
 addressFieldEnPhoneNumber = Telefonnummer
 
-LanguagesTab = Sprachen
+languagesTab = Sprachen
 languageActiveLanguagesLabel = Aktive Sprachen
 languageActiveLanguagesDe = Deutsch
 languageActiveLanguagesEn = Englisch
@@ -320,7 +321,7 @@ languageActiveLanguagesSk = Slowakisch
 languageActiveLanguagesCn = Chinesisch
 languageActiveLanguagesVn = Vietnamesisch
 
-CurrenciesTab = Währungen
+currenciesTab = Währungen
 currencyFormatLabel = Währungsformat
 currencyFormatName = ISO-Code
 currencyFormatSymbol = Symbol
@@ -367,7 +368,7 @@ currencyAvailableCurrenciesVND = VND (Vietnamesischer Dong)
 currencyAvailableCurrenciesXCD = XCD (Ostkaribischer Dollar)
 currencyAvailableCurrenciesZAR = ZAR (Südafrikanischer Rand)
 
-SEOTab = SEO
+seoTab = SEO
 metaRobotsAll = Alle
 metaRobotsIndex = In Index aufnehmen
 metaRobotsNofollow = Links nicht folgen
@@ -395,7 +396,7 @@ metaRobotsTermsAndConditionsLabel = Robots-Einstellungen für die AGB
 metaDeDescriptionTermsAndConditionsLabel = Meta-Beschreibung für die AGB (DE)
 metaEnDescriptionTermsAndConditionsLabel = Meta-Beschreibung für die AGB (EN)
 
-DesignTab = Design
+designTab = Design
 brandPrimaryLabel = Primärfarbe
 brandSecondaryLabel = Sekundärfarbe
 brandSuccessLabel = Farbe der Erfolgsbenachrichtigungen
@@ -403,7 +404,7 @@ brandInfoLabel = Farbe der Informationsbenachrichtigungen
 brandWarningLabel = Farbe der Warnungsbenachrichtigungen
 brandDangerLabel = Farbe der Gefahrenbenachrichtigungen
 
-LoggingAndPerformanceTab = Logging und Performance
+loggingAndPerformanceTab = Logging und Performance
 logDataLabel = Logging-Optionen aktivieren
 logDataPrintErrors = Fehlermeldungen ausgeben
 logDataPrintSuccess = Erfolgsmeldungen ausgeben
