change position from sale and promotional coupons fix coupon logic and placeorder

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -50,6 +50,7 @@ basketItemNumber = "Artikelnummer"
 basketNet = "Netto"
 basketNoItems = "Sie haben noch keine Artikel im Warenkorb."
 basketOops = "Ups, ein Fehler!"
+basketOpenAmount= "Zu zahlender Betrag"
 basketPreview = "Warenkorbvorschau"
 basketRebate = "Rabatt auf Warenwert"
 basketShippingCosts = "Versandkosten"
@@ -85,6 +86,7 @@ checkoutInvoiceAddress = "Rechnungsadresse"
 checkoutMethodOfPaymentChanged="Die von Ihnen ausgewähle Zahlart ist nicht mehr verfügbar."
 checkoutMethodOfPaymentListChanged="Die Liste der Zahlungsarten hat sich geändert."
 checkoutNet = "Netto"
+checkoutOpenAmount = "Zu zahlender Betrag"
 checkoutPaymentMethod = "Zahlungsart"
 checkoutPrivacyPolicy = "Daten:hyphenschutz:hyphenerklärung"
 checkoutShippingAddress = "Lieferadresse"
