--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -50,6 +50,7 @@ basketItemNumber = "Item number"
 basketNet = "Net"
 basketNoItems = "Your shopping cart is empty."
 basketOops = "Oops, something went terribly wrong!"
+basketOpenAmount= "Zu zahlender Betrag"
 basketPreview = "Shopping cart preview"
 basketRebate = "Discount on value of items"
 basketShippingCosts = "Shipping"
@@ -85,6 +86,7 @@ checkoutInvoiceAddress = "Invoice address"
 checkoutMethodOfPaymentChanged="The selected payment method is not available anymore."
 checkoutMethodOfPaymentListChanged="The list of payment methods has been updated."
 checkoutNet = "Net"
+checkoutOpenAmount = "Zu zahlender Betrag"
 checkoutPaymentMethod = "Payment method"
 checkoutPrivacyPolicy = "Privacy:hyphen policy"
 checkoutShippingAddress = "Delivery address"
