CHANGE Config.properties - switch value of "logPerformanceLevelDevelopment" and "logPerformanceLevelLive"

--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -414,5 +414,5 @@ logDataPrintStackTrace = Stack trace ausgeben
 logDataLogMessages = Meldungen loggen
 logDataShowErrorCode = Fehler-Codes anzeigen
 logPerformanceLevelLabel = Performance-Level
-logPerformanceLevelDevelopment = Live-Modus
-logPerformanceLevelLive = Entwicklungsmodus
+logPerformanceLevelDevelopment = Entwicklungsmodus
+logPerformanceLevelLive = Live-Modus
