changed favicon naming and position to tab global

--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -1,7 +1,7 @@
 globalTab = Global
 headerCompanyNameLabel = Name des Webshops
 headerCompanyLogoLabel = URL des Firmenlogos
-globalCompanyIconLabel = Favicon des Webshops
+globalFaviconLabel = Favicon des Webshops
 globalShippingCostsCategoryIdLabel = Kategorie zur Anzeige von Versandkosteninformationen
 globalDefaultContactClassB2bLabel = B2B-Standardkundenklasse
 globalEnableOldUrlPatternLabel = Callisto-URL-Struktur für Artikel aktivieren
