--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -1,7 +1,7 @@
 globalTab = Global
 headerCompanyNameLabel = Name of your store
 headerCompanyLogoLabel = URL to your company logo
-globalCompanyIconLabel = Favicon of the online store
+globalFaviconLabel = Favicon of the online store
 globalShippingCostsCategoryIdLabel = Category to display shipping information
 globalDefaultContactClassB2bLabel = Default customer class B2B
 globalEnableOldUrlPatternLabel = Enable Callisto route pattern for items
