--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -337,6 +337,7 @@ notificationsCheckPassword="Die Passwörter stimmen nicht überein."
 notificationsInvalidResetPasswordUrl="Die angegebene URL ist ungültig oder abgelaufen."
 notificationsItemNotAdded = "Der Artikel konnte nicht hinzugefügt werden"
 notificationsNotEnoughStockItem = "Für die gewählte Artikelmenge ist nicht genügend Bestand verfügbar."
+notificationRemoveCouponMinimumOrderValueIsNotReached = "Der eingelöste Gutschein wurde entfernt. Der Mindestbestellwert wird nicht erreicht."
 ; notifications - Benachrichtigungen
 ; orderConfirmation - Auftragsbestätigung
 orderConfirmation = "Bestellbestätigung"
