--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -337,6 +337,7 @@ notificationsCheckPassword="The passwords do not match."
 notificationsInvalidResetPasswordUrl="The entered URL is invalid or expired."
 notificationsItemNotAdded = "The item could not be added."
 notificationsNotEnoughStockItem = "There is not enough stock available for the selected item quantity."
+notificationRemoveCouponMinimumOrderValueIsNotReached = "The redeemed coupon has been removed. The minimum order value was not reached."
 ; notifications - Notifications
 ; orderConfirmation - Order confirmation
 orderConfirmation = "Order confirmation"
