--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -83,7 +83,7 @@ checkoutCoupon = "Gutschein"
 checkoutGross = "Brutto"
 checkoutGtc = "AGB"
 checkoutInvoiceAddress = "Rechnungsadresse"
-checkoutMethodOfPaymentChanged="Die von Ihnen ausgewähle Zahlart ist nicht mehr verfügbar."
+checkoutMethodOfPaymentChanged="Die von Ihnen ausgewähle Zahlungsart ist nicht mehr verfügbar."
 checkoutMethodOfPaymentListChanged="Die Liste der Zahlungsarten hat sich geändert."
 checkoutNet = "Netto"
 checkoutOpenAmount = "Zu zahlender Betrag"
