add individual error message for blocked logins

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -268,6 +268,7 @@ legalDisclosureMetaDescription = ""
 ; login - Login
 login = "Anmelden"
 loginBackToLogin = "Zurück"
+loginBlocked = "Ihr Kundenkonto wurde gesperrt. Bitte kontaktieren sie den Betreiber."
 loginEmail = "E-Mail"
 loginEmptyPassword="Bitte geben Sie Ihr Passwort ein."
 loginEnterConfirmEmail = "Bitte geben Sie eine gültige E-Mail-Adresse an."
