--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -268,6 +268,7 @@ legalDisclosureMetaDescription = ""
 ; login - Login
 login = "Log in"
 loginBackToLogin = "Back"
+loginBlocked = "Your account has been blocked. Please contact the provided."
 loginEmail = "Email"
 loginEmptyPassword="Please enter your password."
 loginEnterConfirmEmail = "Please enter a valid email address."
