changed company logo config label

--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -1,6 +1,6 @@
 globalTab = Global
 headerCompanyNameLabel = Name des Webshops
-headerCompanyLogoLabel = URL des Firmenlogos
+headerCompanyLogoLabel = Firmenlogo
 globalFaviconLabel = Favicon des Webshops
 globalShippingCostsCategoryIdLabel = Kategorie zur Anzeige von Versandkosteninformationen
 globalDefaultContactClassB2bLabel = B2B-Standardkundenklasse
