--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -1,6 +1,6 @@
 globalTab = Global
 headerCompanyNameLabel = Name of your store
-headerCompanyLogoLabel = URL to your company logo
+headerCompanyLogoLabel = Company logo
 globalFaviconLabel = Favicon of the online store
 globalShippingCostsCategoryIdLabel = Category to display shipping information
 globalDefaultContactClassB2bLabel = Default customer class B2B
