ADD logic to handle bundle specific names

--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -494,6 +494,7 @@ singleItemMissingOrderPropertiesError = "The following fields are required:<hr><
 singleItemModel = "Model"
 singleItemMoreDetails = "More details"
 singleItemNetWeight = "Net weight"
+singleItemBundleName = "[Bundle] :itemName"
 singleItemNumber = "Item number"
 singleItemPleaseSelect = "Please select"
 singleItemPleaseSelectValidVariation = "Please select a valid variation."
