--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -494,6 +494,7 @@ singleItemMissingOrderPropertiesError = "Folgende Bestellmerkmale sind Pflichtfe
 singleItemModel = "Modell"
 singleItemMoreDetails = "Weitere Details"
 singleItemNetWeight = "Netto-Gewicht"
+singleItemBundleName = "[Paket] :itemName"
 singleItemNumber = "Artikelnummer"
 singleItemPleaseSelect = "Bitte wählen"
 singleItemPleaseSelectValidVariation = "Bitte wählen Sie eine gültige Variante."
