CHANGED translation key for the ui

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -223,6 +223,7 @@ homepageShowAll = "Alle ansehen"
 itemApply = "Übernehmen"
 itemAvailabilityAverageDays_asc = "Verfügbarkeit ⬆"
 itemAvailabilityAverageDays_desc = "Verfügbarkeit ⬇"
+itemBundleName = "[Paket] :itemName"
 itemCategories = "Kategorien"
 itemClose = "Schließen"
 itemExclusive = "zzgl."
@@ -494,7 +495,6 @@ singleItemMissingOrderPropertiesError = "Folgende Bestellmerkmale sind Pflichtfe
 singleItemModel = "Modell"
 singleItemMoreDetails = "Weitere Details"
 singleItemNetWeight = "Netto-Gewicht"
-singleItemBundleName = "[Paket] :itemName"
 singleItemNumber = "Artikelnummer"
 singleItemPleaseSelect = "Bitte wählen"
 singleItemPleaseSelectValidVariation = "Bitte wählen Sie eine gültige Variante."
