--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -223,6 +223,7 @@ homepageShowAll = "Show all"
 itemApply = "Apply"
 itemAvailabilityAverageDays_asc = "Availability ⬆"
 itemAvailabilityAverageDays_desc = "Availability ⬇"
+itemBundleName = "[Bundle] :itemName"
 itemCategories = "Categories"
 itemClose = "Close"
 itemExclusive = "excl."
@@ -494,7 +495,6 @@ singleItemMissingOrderPropertiesError = "The following fields are required:<hr><
 singleItemModel = "Model"
 singleItemMoreDetails = "More details"
 singleItemNetWeight = "Net weight"
-singleItemBundleName = "[Bundle] :itemName"
 singleItemNumber = "Item number"
 singleItemPleaseSelect = "Please select"
 singleItemPleaseSelectValidVariation = "Please select a valid variation."
