ADDED logic to show tag on item if item package

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -223,6 +223,7 @@ homepageShowAll = "Alle ansehen"
 itemApply = "Übernehmen"
 itemAvailabilityAverageDays_asc = "Verfügbarkeit ⬆"
 itemAvailabilityAverageDays_desc = "Verfügbarkeit ⬇"
+itemBundle = "Artikelpaket"
 itemBundleName = "[Paket] :itemName"
 itemCategories = "Kategorien"
 itemClose = "Schließen"
