--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -223,6 +223,7 @@ homepageShowAll = "Show all"
 itemApply = "Apply"
 itemAvailabilityAverageDays_asc = "Availability ⬆"
 itemAvailabilityAverageDays_desc = "Availability ⬇"
+itemBundle = "Item package"
 itemBundleName = "[Bundle] :itemName"
 itemCategories = "Categories"
 itemClose = "Close"
