ADD item bundle content translation

--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -225,6 +225,7 @@ itemAvailabilityAverageDays_asc = "Availability ⬆"
 itemAvailabilityAverageDays_desc = "Availability ⬇"
 itemBundle = "Item package"
 itemBundleName = "[Bundle] :itemName"
+itemBundleContent = "Item package content:"
 itemCategories = "Categories"
 itemClose = "Close"
 itemExclusive = "excl."
