--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -225,6 +225,7 @@ itemAvailabilityAverageDays_asc = "Verfügbarkeit ⬆"
 itemAvailabilityAverageDays_desc = "Verfügbarkeit ⬇"
 itemBundle = "Artikelpaket"
 itemBundleName = "[Paket] :itemName"
+itemBundleContent = "Artikelpaket Inhalt:"
 itemCategories = "Kategorien"
 itemClose = "Schließen"
 itemExclusive = "zzgl."
