ADD translations for the TextWidget

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -88,6 +88,9 @@ itemVariationCustomNumber_asc = "Variantennummer ⬆"
 itemVariationCustomNumber_desc = "Variantennummer ⬇"
 itemVariationLastUpdateTimestamp_asc = "Letzte Aktualisierung"
 itemVariationLastUpdateTimestamp_desc = "Erste Aktualisierung"
+; Text
+textLabel = "Text"
+widgetNodeEditorLabel = "Texteditor"
 ; Title bar
 titleBarLabel = "Titelleiste"
 titleBarTextLabel = "Titelleiste Text"
