--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -88,6 +88,9 @@ itemVariationCustomNumber_asc = "Variation number ⬆"
 itemVariationCustomNumber_desc = "Variation number ⬇"
 itemVariationLastUpdateTimestamp_asc = "Last update"
 itemVariationLastUpdateTimestamp_desc = "First update"
+; Text
+textLabel = "Text"
+widgetNodeEditorLabel = "Text editor"
 ; Title bar
 titleBarLabel = "Title bar"
 titleBarTextLabel = "Title bar text"
