ADD without background color choice

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -1,12 +1,13 @@
 ; Global
+widgetAppearanceDanger = "Gefahr"
+widgetAppearanceInfo = "Information"
 widgetAppearanceLabel = "Erscheinungsbild"
-widgetAppearanceTooltip = "Grundfarbe für das Erscheinungsbild des Elements wählen."
 widgetAppearancePrimary = "Primär"
 widgetAppearanceSecondary = "Sekundär"
 widgetAppearanceSuccess = "Erfolg"
-widgetAppearanceInfo = "Information"
+widgetAppearanceTooltip = "Grundfarbe für das Erscheinungsbild des Elements wählen."
 widgetAppearanceWarning = "Warnung"
-widgetAppearanceDanger = "Gefahr"
+widgetAppearanceWithout = "Ohne"
 ; Grid
 gridFourColumnLabel = "Raster mit 4 Spalten"
 gridThreeColumnLabel = "Raster mit 3 Spalten"
