--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -1,12 +1,13 @@
 ; Global
+widgetAppearanceDanger = "Danger"
+widgetAppearanceInfo = "Information"
 widgetAppearanceLabel = "Appearance"
-widgetAppearanceTooltip = "Select the base colour of the appearance of the element."
-widgetAppearancePrimary = Primary
+widgetAppearancePrimary = "Primary"
 widgetAppearanceSecondary = "Secondary"
 widgetAppearanceSuccess = "Success"
-widgetAppearanceInfo = "Information"
+widgetAppearanceTooltip = "Select the base colour of the appearance of the element."
 widgetAppearanceWarning = "Warning"
-widgetAppearanceDanger = "Danger"
+widgetAppearanceWithout = "Without"
 ; Grid
 gridFourColumnLabel = "Four column grid"
 gridThreeColumnLabel = "Three column grid"
