ADD notification for splitted item bundles

--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -340,6 +340,7 @@ notificationsCalculateShippingFailed = "Error while calculating shipping costs. 
 notificationsCheckPassword="The passwords do not match."
 notificationsInvalidResetPasswordUrl="The entered URL is invalid or expired."
 notificationsItemNotAdded = "The item could not be added."
+notificationsItemBundleSplitted = "Item bundle splitted"
 notificationsNotEnoughStockItem = "There is not enough stock available for the selected item quantity."
 notificationRemoveCouponMinimumOrderValueIsNotReached = "The redeemed coupon has been removed. The minimum order value was not reached."
 ; notifications - Notifications
