CHANGE TextWidget - update translation

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -7,7 +7,7 @@ widgetAppearanceSecondary = "Sekundär"
 widgetAppearanceSuccess = "Erfolg"
 widgetAppearanceTooltip = "Grundfarbe für das Erscheinungsbild des Elements wählen."
 widgetAppearanceWarning = "Warnung"
-widgetAppearanceWithout = "Ohne"
+widgetAppearanceNone = "Ohne"
 ; Grid
 gridFourColumnLabel = "Raster mit 4 Spalten"
 gridThreeColumnLabel = "Raster mit 3 Spalten"
@@ -91,7 +91,8 @@ itemVariationLastUpdateTimestamp_asc = "Letzte Aktualisierung"
 itemVariationLastUpdateTimestamp_desc = "Erste Aktualisierung"
 ; Text
 textLabel = "Text"
-widgetNodeEditorLabel = "Texteditor"
+textCodeEditorLabel = "Texteditor"
+textPlaceholder = "Über Texteditor bearbeiten"
 ; Title bar
 titleBarLabel = "Titelleiste"
 titleBarTextLabel = "Titelleiste Text"
