--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -7,7 +7,7 @@ widgetAppearanceSecondary = "Secondary"
 widgetAppearanceSuccess = "Success"
 widgetAppearanceTooltip = "Select the base colour of the appearance of the element."
 widgetAppearanceWarning = "Warning"
-widgetAppearanceWithout = "Without"
+widgetAppearanceNone = "None"
 ; Grid
 gridFourColumnLabel = "Four column grid"
 gridThreeColumnLabel = "Three column grid"
@@ -91,7 +91,8 @@ itemVariationLastUpdateTimestamp_asc = "Last update"
 itemVariationLastUpdateTimestamp_desc = "First update"
 ; Text
 textLabel = "Text"
-widgetNodeEditorLabel = "Text editor"
+textCodeEditorLabel = "Text editor"
+textPlaceholder = "Edit via text editor"
 ; Title bar
 titleBarLabel = "Title bar"
 titleBarTextLabel = "Title bar text"
