--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -223,9 +223,9 @@ homepageShowAll = "Show all"
 itemApply = "Apply"
 itemAvailabilityAverageDays_asc = "Availability ⬆"
 itemAvailabilityAverageDays_desc = "Availability ⬇"
-itemBundle = "Item package"
+itemBundle = "Item bundle"
 itemBundleName = "[Bundle] :itemName"
-itemBundleContent = "Item package content:"
+itemBundleContent = "Item bundle content:"
 itemCategories = "Categories"
 itemClose = "Close"
 itemExclusive = "excl."
@@ -340,7 +340,7 @@ notificationsCalculateShippingFailed = "Error while calculating shipping costs. 
 notificationsCheckPassword="The passwords do not match."
 notificationsInvalidResetPasswordUrl="The entered URL is invalid or expired."
 notificationsItemNotAdded = "The item could not be added."
-notificationsItemBundleSplitted = "Item bundle splitted"
+notificationsItemBundleSplitted = "Item bundle has been split."
 notificationsNotEnoughStockItem = "There is not enough stock available for the selected item quantity."
 notificationRemoveCouponMinimumOrderValueIsNotReached = "The redeemed coupon has been removed. The minimum order value was not reached."
 ; notifications - Notifications
