FIX add exclude vats to items

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -232,6 +232,7 @@ itemExclusive = "zzgl."
 itemFilter = "Filter"
 itemFrom = "ab "
 itemInclVAT = "inkl. ges. MwSt."
+itemExclVAT = "zzgl. ges. MwSt."
 itemList1ListName = "Artikelliste"
 itemList2ListName = "Artikelliste"
 itemList3ListName = "Artikelliste"
