--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -232,6 +232,7 @@ itemExclusive = "excl."
 itemFilter = "Filter"
 itemFrom = "from "
 itemInclVAT = "Incl. VAT"
+itemExclVAT = "Excl. VAT"
 itemList1ListName = "Item list"
 itemList2ListName = "Item list"
 itemList3ListName = "Item list"
