Reset Password eMail Link für Mail Cleint

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -427,7 +427,7 @@ resetPwChangePasswordFailed = "Das Passwort konnte nicht geändert werden."
 resetPwChangePasswordSuccessful = "Das Passwort wurde erfolgreich geändert."
 resetPwCheckPassword="Die Passwörter stimmen nicht überein."
 resetPwInvalidPassword="Ungültiges Format. Bitte beachten Sie die Vorgaben."
-resetPwMail = "Sehr geehrte/r <firstname> <lastname>,<br><br>Sie haben für Ihr Benutzerkonto <email> ein neues Passwort angefordert.<br>Um den Prozess abzuschließen, klicken Sie bitte auf folgenden Link: <br><br><url> .<br><br>Mit freundlichen Grüßen,<br><shopname>"
+resetPwMail = "Sehr geehrte/r <firstname> <lastname>,<br><br>Sie haben für Ihr Benutzerkonto <email> ein neues Passwort angefordert.<br>Um den Prozess abzuschließen, klicken Sie bitte auf folgenden Link: <br><br><a href="<url>" target="_blank" title="Passwort zurücksetzen"><url></a><br><br>Mit freundlichen Grüßen,<br><shopname>"
 resetPwMailSubject = "Zurücksetzen Ihres Passwortes"
 resetPwNewPassword = "Neues Passwort"
 resetPwPasswordHintChar = "Das Passwort muss mindestens einen Buchstaben enthalten."
