Ceres-Config erstellt: searchShowImage

--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -54,6 +54,7 @@ headerShowNavbarsTop = Oben
 headerShowNavbarsSide = Links
 headerShowNavbarsBoth = Oben und links
 headerFixedNavbarLabel = Navigationsleiste oben fixieren
+headerSearchShowImage = Bilderausgabe in der Suchvorschau
 headerShowCategoryTypesLabel = Kategorietypen, die in der Navigationsleiste angezeigt werden
 headerShowCategoryTypesAll = Alle
 headerShowCategoryTypesItem = Artikel
