--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -54,6 +54,7 @@ headerShowNavbarsTop = At the top
 headerShowNavbarsSide = On the left
 headerShowNavbarsBoth = At the top and on the left
 headerFixedNavbarLabel = Fix the navigation bar at the top of the page
+headerSearchShowImage = Image output in the search preview
 headerShowCategoryTypesLabel = Type of categories rendered in the navigation
 headerShowCategoryTypesAll = All
 headerShowCategoryTypesItem = Item
