Config wurde in den Tab Pagination and sorting umgezogen

--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -54,7 +54,6 @@ headerShowNavbarsTop = Oben
 headerShowNavbarsSide = Links
 headerShowNavbarsBoth = Oben und links
 headerFixedNavbarLabel = Navigationsleiste oben fixieren
-headerSearchShowImage = Bilderausgabe in der Suchvorschau
 headerShowCategoryTypesLabel = Kategorietypen, die in der Navigationsleiste angezeigt werden
 headerShowCategoryTypesAll = Alle
 headerShowCategoryTypesItem = Artikel
@@ -264,6 +263,7 @@ sortingPrioritySearch1Label = Empfohlene Artikelsuche: Erster Wert für die Arti
 sortingPrioritySearch2Label = Empfohlene Artikelsuche: Zweiter Wert für die Artikelsuche
 sortingPrioritySearch3Label = Empfohlene Artikelsuche: Dritter Wert für die Artikelsuche
 searchForwardToSingleItemLabel = Artikelsuche: Zur Artikeleinzelansicht weiterleiten
+searchShowImage = Bilderausgabe in der Suchvorschau
 
 checkoutAndMyAccountTab = Kaufabwicklung und Mein Konto
 myAccountOrdersPerPageLabel = Anzahl der Aufträge pro Seite in der Auftragshistorie
