--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -54,7 +54,6 @@ headerShowNavbarsTop = At the top
 headerShowNavbarsSide = On the left
 headerShowNavbarsBoth = At the top and on the left
 headerFixedNavbarLabel = Fix the navigation bar at the top of the page
-headerSearchShowImage = Image output in the search preview
 headerShowCategoryTypesLabel = Type of categories rendered in the navigation
 headerShowCategoryTypesAll = All
 headerShowCategoryTypesItem = Item
@@ -264,6 +263,7 @@ sortingPrioritySearch1Label = Recommended search results: First search value
 sortingPrioritySearch2Label = Recommended search results: Second search value
 sortingPrioritySearch3Label = Recommended search results: Third search value
 searchForwardToSingleItemLabel = Search: Forward to single item view
+searchShowImage = Image output in the search preview
 
 checkoutAndMyAccountTab = Checkout and My account
 myAccountOrdersPerPageLabel = Number of orders to show per page in order history
