--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -263,6 +263,7 @@ sortingPrioritySearch1Label = Empfohlene Artikelsuche: Erster Wert für die Arti
 sortingPrioritySearch2Label = Empfohlene Artikelsuche: Zweiter Wert für die Artikelsuche
 sortingPrioritySearch3Label = Empfohlene Artikelsuche: Dritter Wert für die Artikelsuche
 searchForwardToSingleItemLabel = Artikelsuche: Zur Artikeleinzelansicht weiterleiten
+searchAlwaysShowSearchBar = TODO Suchleiste immer anzeigen
 
 checkoutAndMyAccountTab = Kaufabwicklung und Mein Konto
 myAccountOrdersPerPageLabel = Anzahl der Aufträge pro Seite in der Auftragshistorie
