Neuer Config-Wert unter Paginierung und Sortierung -> noindex

--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -206,6 +206,7 @@ paginationColumnsPerPageLabel = Anzahl der Spalten pro Seite
 paginationColumnsPerPage3 = 3
 paginationColumnsPerPage4 = 4
 paginationColumnsPerPage5 = 5
+pagination_noindex = SEO: Seitenzahl, ab welcher der Wert noindex gesetzt wird
 paginationRowsPerPageLabel = Anzahl der Reihen pro Seite
 paginationRowsPerPage5 = 5
 paginationRowsPerPage10 = 10
