--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -206,6 +206,7 @@ paginationColumnsPerPageLabel = Columns per page
 paginationColumnsPerPage3 = 3
 paginationColumnsPerPage4 = 4
 paginationColumnsPerPage5 = 5
+pagination_noindex = SEO: Set the value noindex beginning at page
 paginationRowsPerPageLabel = Rows per page
 paginationRowsPerPage5 = 5
 paginationRowsPerPage10 = 10
