Neuer Config-Werrt unter SEO -> Search Result; Abfrage im Frontend

--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -397,6 +397,7 @@ metaEnDescriptionPrivacyPolicyLabel = Meta-Beschreibung für die Datenschutzerkl
 metaRobotsTermsAndConditionsLabel = Robots-Einstellungen für die AGB
 metaDeDescriptionTermsAndConditionsLabel = Meta-Beschreibung für die AGB (DE)
 metaEnDescriptionTermsAndConditionsLabel = Meta-Beschreibung für die AGB (EN)
+metaRobotsSearchResult = Robots-Einstellungen für die Suchergebnisse
 
 designTab = Design
 brandPrimaryLabel = Primärfarbe
