--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -397,6 +397,7 @@ metaEnDescriptionPrivacyPolicyLabel = Meta description for privacy policy (EN)
 metaRobotsTermsAndConditionsLabel = Robots for terms and conditions
 metaDeDescriptionTermsAndConditionsLabel = Meta description for terms and conditions (DE)
 metaEnDescriptionTermsAndConditionsLabel = Meta description for terms and conditions (EN)
+metaRobotsSearchResult = Robots for search result
 
 designTab = Design
 brandPrimaryLabel = Primary colour
